--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+<!DOCTYPE <html> 
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Home</title>
+  <head>
+    <meta charset="UTF-8">
+     <meta name="viwport" content="width=device-width, intial-sacale=1"
+  <h1>Home</h1>
 </head>
 <body>
   <header>
     <h2>WELCOME</h2>
   </header>
   <hr
-  <nav>
+  <ul>
     <li><a>href="imc.html>imc></li></a>
-  </hr>
+  </nav>
