--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8">
      <meta name="viwport" content="width=device-width, intial-sacale=1"
-  <h1>Home</h1>
 </head>
+   <h1>Home</h1>
+
 <body>
-  <header>
-    <h2>WELCOME</h2>
-  </header>
-  <hr
   <ul>
-    <li><a>href="imc.html>imc></li></a>
-  </nav>
+    <li><a href="imc.hml"> IMC </a></li>
+    
